<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    tools:context=".Settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textSize="35sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:background="@android:color/darker_gray" />

    <Switch
        android:id="@+id/settings_lightmode"
        android:layout_width="450sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:enabled="false"
        android:text="@string/settings_lightmode"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <Switch
        android:id="@+id/settings_bottomnavigation"
        android:layout_width="450sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="95dp"
        android:enabled="false"
        android:text="@string/settings_bottomnavigation"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

</FrameLayout>